--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
- 
+
 }
 
 body {
@@ -11,7 +11,10 @@ body {
 
 }
 
-html, body, #root, #app{
+html,
+body,
+#root,
+#app {
   height: 100%;
 }
 
@@ -45,20 +48,94 @@ header nav a:hover {
   color: blue;
 }
 
+
 /****************main css*************************/
 main {
   background-color: black;
   color: white;
   min-height: 20%;
+  display: block; 
+  padding: 0;
+  margin: 0;
+  width: 100%;
+
+}
+
+.jumbotron {
+  background-image: url('/jumbotron.jpg');
+  height: 400px;
+  background-position: top;
+  background-size: cover;
+  width: 100%;
+}
+
+.product-list {
+  background-color: #1c1c1c; 
+  color: white;
+  padding: 3rem 0;
+  position: relative;
+}
+.container {
+  max-width: 90%; 
+  margin: 0 auto;
+  padding: 0 15px;
+  position: relative;
+}
+.cards-container {
   display: flex;
-  align-items: center;
-  padding-left: 5em;
-  margin-top: 0.5em;
+  flex-wrap: wrap; 
+  padding-top: 3rem; 
+}
+ .card {
+  width: calc(100% / 6); 
+  padding: 10px;
+  margin-bottom: 20px;
+}
+
+.img-container {
+    height: 180px;
+    width: 180px;
+    overflow: hidden;
+    margin-bottom: 10px;
+}
+
+.card img {
+  width: 100%;
+  aspect-ratio: 1/1; /* Mantiene le immagini quadrate/proporzionate */
+  object-fit: cover;
+  display: block;
+}
+
+.card h4 {
+  margin-top: 10px;
+  text-transform: uppercase;
+  font-size: 0.8rem;
+  font-weight: normal;
 }
 
 
+.current-series-btn {
+    background-color: #0282f9; 
+    color: white;
+    font-weight: bold;
+    padding: 10px 20px;
+    font-size: 1.2rem;
+    position: absolute;
+    top: -25px; 
+    left: 0; 
+   
+}
 
-
+.load-more {
+    display: block;
+    margin: 20px auto;
+    background-color: #0282f9;
+    color: white;
+    border: none;
+    padding: 10px 40px;
+    font-weight: bold;
+    cursor: pointer;
+}
 /****************footer css*************************/
 
 #merchandise {
@@ -97,51 +174,58 @@ main {
   align-items: center;
 }
 
-#social button{
+#social button {
   border-color: dodgerblue;
   height: 3em;
   padding: 0 1em;
-  background-color:rgb(58, 57, 57) ;
+  background-color: rgb(58, 57, 57);
   color: white
 }
-#account{
+
+#account {
   display: flex;
   align-items: center;
-  justify-content:space-around ;
+  justify-content: space-around;
 }
-#account h4{
+
+#account h4 {
   color: dodgerblue;
   padding: 1em;
 }
 
-#account img{
-padding: .5em;
+#account img {
+  padding: .5em;
 }
+
 .column {
   color: white;
   flex: 1;
 }
-.left{
+
+.left {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
   align-content: space-around;
   padding: 1em 0;
-  
+
 }
 
-.left ul{
+.left ul {
   list-style: none;
 
 }
-#bg-dc-logo{
-    background-image: url("/public/dc-logo-bg.png");
-    background-repeat: no-repeat;
-    background-position: center;
+
+#bg-dc-logo {
+  background-image: url("/public/dc-logo-bg.png");
+  background-repeat: no-repeat;
+  background-position: center;
 }
-.left h3{
+
+.left h3 {
   padding: 1em 0;
 }
-.left li{
+
+.left li {
   color: grey;
 }
